@@ -32,11 +32,13 @@ dependencies {
 	implementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_api_version}"
 
 	testImplementation "org.junit.jupiter:junit-jupiter:5.10.2"
+	testImplementation "org.mockito:mockito-core:5.14.2"
 	testRuntimeOnly "org.junit.platform:junit-platform-launcher"
 }
 
 test {
 	useJUnitPlatform()
+	jvmArgs("-Dnet.bytebuddy.experimental=true", "-XX:+EnableDynamicAgentLoading")
 }
 
 processResources {
